--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="ui.activity.ListaPacotesActivity">
+        <activity android:name=".ui.activity.ResumoPacoteActivity"></activity>
+        <activity android:name=".ui.activity.ListaPacotesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
